static/css/base.css
html {
    height: 100%;
}

body {
    height: 100%;
    background: url('/media/homepage_background.jpg') no-repeat center center fixed;
    background-size: cover;
    color: #555;
    font-family: 'Inter', sans-serif;
}

/* Keep FontAwesome icons centered */
.icon {
    align-items: center;
    display: inline-flex;
    justify-content: center;
    height: 1.5rem;
    width: 1.5rem;
}

.logo-font {
    text-transform: uppercase;
}

.main-logo-link {
    width: fit-content;
}

.text-black {
    color: #000 !important;
}

.border-black {
    border: 1px solid #000 !important;
}

/* Buttons */
.btn-black {
    background: black;
    color: white;
}

.btn-black:hover,
.btn-black:active,
.btn-black:focus {
    background: #222;
    color: white;
}

.shop-now-button {
    background: black;
    color: white;
    min-width: 260px;
}

.shop-now-button:hover,
.shop-now-button:active,
.shop-now-button:focus {
    background: #222;
    color: white;
}

/* -------------------------------- Media Queries */

/* Slightly larger container on xl screens */
@media (min-width: 1200px) {
    .container {
        max-width: 80%;
    }
}

/* Push page content down under fixed header on medium and up */
@media (min-width: 992px) {
    .header-container {
        padding-top: 164px;
    }
}

